# meetup-slides

./: ReadMe.md  pyproject.toml
2023-11/: intro.html  intro.ipynb  intro.slides.html
2024-05/: intro.ipynb  intro.slides.html
2024-06/: intro.ipynb  intro.slides.html
