[tool.poetry]
name = "meetup-slides"
version = "0.1.0"
description = "PyData Berlin meetup slides"
authors = ["Daniel Ringler"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandoc = "^2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
